Add license and copyright information

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+# SPDX-FileCopyrightText: 2018 German Aerospace Center (DLR)
+# SPDX-License-Identifier: CC0-1.0
+
 # Ignore Python specific temporarily created files
 # Byte-compiled / optimized / DLL files
 __pycache__/
